--- a/src/app/users/leaderboards/leaderboards.component.css
+++ b/src/app/users/leaderboards/leaderboards.component.css
@@ -1,4 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Cabin:600');
+
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
+}
+
 table {
     margin-top: 10px;
     border-collapse: separate;
