--- a/src/app/users/leaderboards/leaderboards.component.html
+++ b/src/app/users/leaderboards/leaderboards.component.html
@@ -46,34 +46,79 @@
                 </div>
                 <div class="modal-body">
                   <div class="form-group row">
-                      <label for="example-number-input" class="col-2 col-form-label">Split</label>
+                      <label for="split" class="col-2 col-form-label">Split</label>
                       <div class="col-4">
-                          <input class="form-control" type="number" id="example-number-input" max="100" min="0" [(ngModel)]="proposed_split"/>
+                          <input class="form-control has-feedback" type="range" id="split" step="5"  [(ngModel)]="proposed_split" placeholder="Split" required/>
+                          <!-- <small *ngIf="!example-number-input.valid">Required</small> -->
                       </div>
                       <div class="col-4">
-                          : {{ 100 - proposed_split }}
+                          {{ proposed_split }} : {{ 100 - proposed_split }}
                       </div>
                   </div>
                   <div class="form-group row">
-                      <label for="split" class="col-2 col-form-label">Amount to invest</label>
+                      <label for="amount" class="col-2 col-form-label">Amount to invest</label>
                       <div class="input-group col-6">
                           <span class="input-group-addon">$</span>
                           <input type="number" value="1000" min="0" step="0.01" data-number-to-fixed="2"
-                            data-number-stepfactor="100" class="form-control currency" [(ngModel)]="proposed_amount" id="split" />
+                            data-number-stepfactor="100" class="form-control currency" [(ngModel)]="proposed_amount" id="amount" placeholder="Amount to Invest" required />
                       </div>
                   </div>
                   <div class="form-group row">
                     <label for="example-date-input" class="col-2 col-form-label">Cutoff Date</label>
                     <div class="col-10">
-                      <input class="form-control" type="date" value="2011-08-19" id="example-date-input">
+                      <input class="form-control" type="date" value="2011-08-19" placeholder="Date" id="example-date-input" required />
                     </div>
                   </div>
                 </div>
                 <div class="modal-footer">
                   <div *ngIf="isSent"><h5>Your request has been sent</h5></div>
+                  <!-- <div *ngIf="isCorrectlySent" -->
                   <button type="button" *ngIf="!isSent" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                   <button type="button" *ngIf="isSent" class="btn btn-secondary" data-dismiss="modal">Close</button>
                   <button type="button" class="btn btn-primary" (click)="saveMessage(item.user_id)">Send offer</button>
+                      <!-- <div [hidden]="submitted"> -->
+                        <!-- <h1>Hero Form 3 (Reactive)</h1> -->
+                        <!-- <form [formGroup]="heroForm"  *ngIf="active"  (ngSubmit)="onSubmit()"> -->
+
+                          <!-- <div class="form-group">
+                            <label for="name">Username</label>
+
+                            <input type="text" id="name" class="form-control"
+                                   required >
+
+                             <div *ngIf="formErrors.name" class="alert alert-danger">
+                              {{ formErrors.name }}
+                            </div>
+                          </div> -->
+
+                          <!-- <div class="form-group">
+                            <label for="alterEgo">Alter Ego</label>
+                            <input type="text" id="alterEgo" class="form-control"
+                                formControlName="alterEgo"  >
+                          </div>
+
+                          <div class="form-group">
+                            <label for="power">Hero Power</label>
+                            <select id="power" class="form-control"
+                                formControlName="power" required >
+                              <option *ngFor="let p of powers" [value]="p">{{p}}</option>
+                            </select>
+
+                            <div *ngIf="formErrors.power" class="alert alert-danger">
+                              {{ formErrors.power }}
+                            </div>
+                          </div>
+
+                          <button type="submit" class="btn btn-default"
+                                 [disabled]="!heroForm.valid">Submit</button>
+                          <button type="button" class="btn btn-default"
+                                 (click)="addHero()">New Hero</button>
+                        </form> -->
+                      <!-- </div> -->
+
+                      <!-- <hero-submitted [hero]="hero" [(submitted)]="submitted"></hero-submitted> -->
+
+
                 </div>
               </div>
             </div>
