take to editor page if it is a developer + integrate fullstory + integrate modal box in leaderboard + send name of algorithm when sending a chat + if the user accept a chat -> take to contract page

--- a/src/app/fixed/side-bar/side-bar.component.html
+++ b/src/app/fixed/side-bar/side-bar.component.html
@@ -6,11 +6,11 @@
       <ul class="sidebar">
         <li class="sidebar-title"><span>NAVIGATION</span></li>
         <li class="sidebar-list">
-          <a routerLink="/dashboard">Dashboard <span class="menu-icon fa fa-tachometer"></span></a>
+          <a routerLink="/dashboard/investor">Dashboard <span class="menu-icon fa fa-tachometer"></span></a>
         </li>
 
         <li class="sidebar-list">
-          <a routerLink="/myprojects">My projects <span class="menu-icon fa fa-pencil"></span></a>
+          <a routerLink="/dashboard/developer">My projects <span class="menu-icon fa fa-pencil"></span></a>
         </li>
 
         <li class="sidebar-list">
