--- a/src/app/projectsFolder/projects/projects.component.html
+++ b/src/app/projectsFolder/projects/projects.component.html
@@ -1,5 +1,5 @@
 <div class="type">
-  <input id="tab1" type="radio" name="tabs" routerLink="/dashboard">
+  <input id="tab1" type="radio" name="tabs" routerLink="/dashboard/investor">
   <label id="l1" for="tab1">Investor</label>
 
   <input id="tab2" type="radio" name="tabs" checked>
