--- a/src/app/users/dashboard/dashboard.component.html
+++ b/src/app/users/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <input id="tab1" type="radio" name="tabs" checked>
     <label id="l1" for="tab1">Investor</label>
 
-    <input id="tab2" type="radio" name="tabs" routerLink="/myprojects">
+    <input id="tab2" type="radio" name="tabs" routerLink="/dashboard/developer">
     <label for="tab2">Developer</label>
 </div>
 
