--- a/src/app/fixed/top-header/top-header.component.html
+++ b/src/app/fixed/top-header/top-header.component.html
@@ -5,7 +5,7 @@
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" routerLink="/dashboard">justForex</a>
+  <a class="navbar-brand" routerLink="/dashboard/investor">justForex</a>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item">
