--- a/src/app/users/leaderboards/leaderboards.component.html
+++ b/src/app/users/leaderboards/leaderboards.component.html
@@ -21,13 +21,13 @@
     </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let datum of data; let i = index" id="data">
+      <tr *ngFor="let datum of data; let i = index" id="data" (click)="algorithm_name = datum.name">
 
           <td class="align-middle">{{i + 1}}</td>
           <td class="align-middle">
             <span style="width:2vw; height:2vw;"><img src="{{'../../assets/images/' + datum.profile_pic}}"></span>
           </td>
-          <td class="information align-middle">
+          <td class="information align-middle" >
             {{datum.name}}
           </td>
           <td class="information align-middle">{{datum.country}}</td>
@@ -38,6 +38,52 @@
             <button class="btn btn-success" data-toggle="modal" [attr.data-target]="'#' + datum._id" (click)="resetSentData()">Make offer</button>
             <button class="btn btn-info"  routerLink="/graphs">Results</button>
           </td>
+
+          <div [attr.id]="datum._id" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h4 class="modal-title" id="exampleModalLabel">Transaction</h4>
+                </div>
+                <div class="modal-body">
+                  <div class="form-group row">
+                      <label for="split" class="col-2 col-form-label">Split</label>
+                      <div class="col-4">
+                          <input class="form-control has-feedback" type="range" id="split" step="5" [(ngModel)]="proposed_split" placeholder="Split" required/>
+                          <!-- <small *ngIf="!example-number-input.valid">Required</small> -->
+
+                      </div>
+                      <div class="col-4">
+                          {{ proposed_split }} : {{ 100 - proposed_split }} <br/>
+                          <small class="text-muted">(Investor : Developer)</small>
+                      </div>
+                  </div>
+                  <div class="form-group row">
+                      <label for="amount" class="col-2 col-form-label">Amount to invest</label>
+                      <div class="input-group col-6">
+                          <span class="input-group-addon">$</span>
+                          <input type="number" value="1000" min="0" step="0.01" data-number-to-fixed="2"
+                            data-number-stepfactor="100" class="form-control currency" [(ngModel)]="proposed_amount" id="amount" placeholder="Amount to Invest" required />
+
+                      </div>
+                      <small class="text-muted" *ngIf="proposed_amount < 0"> Invalid Number. Please enter a positive number</small>
+                  </div>
+                  <div class="form-group row">
+                    <label for="example-date-input" class="col-2 col-form-label">Cutoff Date</label>
+                    <div class="col-10">
+                      <input class="form-control" type="date" value="2011-08-19" placeholder="Date" id="example-date-input" required />
+                    </div>
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <div *ngIf="isSent"><h5>Your request has been sent</h5></div>
+                  <button type="button" *ngIf="!isSent" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                  <button type="button" *ngIf="isSent" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary" (click)="saveMessage(datum.user_id)">Send offer</button>
+                </div>
+              </div>
+            </div>
+        </div>
       </tr>
     </tbody>
     <tfoot>
