--- a/src/app/users/chat/message/message.component.html
+++ b/src/app/users/chat/message/message.component.html
@@ -9,23 +9,26 @@
   <div *ngIf="pending">
     <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
   </div>
+  <div *ngIf="cross">
+    <i class="fa fa-times" aria-hidden="true"></i>
+  </div>
 </div>
 
 <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">YOU HAVE AN OFFER FROM {{sender.name}}</h5>
+        <p class="f" id="exampleModalLongTitle">You have an offer from </p> <p class="bold">{{sender.name}}</p>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
         <div id="normal" *ngIf="!pending">
-          <h4>Algorithm Name: {{message.algorithm_name}}</h4>
-          <h4>Proposed Split {{ message.proposed_split }} : {{ 100 - message.proposed_split}}</h4>
-          <h4>Proposed Investment Amount {{ message.proposed_amount }}</h4>
-          <h4>Proposed End Date</h4>
+          <p class="f">Algorithm Name: </p> <p class="boldRight"> {{message.algorithm_name}}</p> <br>
+          <p class="f">Proposed Split: </p> <p class="boldRight"> {{ message.proposed_split }} : {{ 100 - message.proposed_split}}</p> <br>
+          <p class="f">Proposed Investment Amount: </p> <p class="boldRight"> {{ message.proposed_amount }}</p> <br>
+          <p class="f">Proposed End Date: </p>
         </div>
         <div id="counter" *ngIf="pending">
           <div class="form-group row">
