--- a/src/app/projectsFolder/myproject/myproject.component.html
+++ b/src/app/projectsFolder/myproject/myproject.component.html
@@ -7,7 +7,7 @@
         <p>{{ project.language }}</p>
         <p>Last modified: {{ project.last_edited }}</p>
         <button class="btn btn-primary btn-default">Test</button>
-        <button class="btn btn-default btn-warning" [routerLink]="['../editor', project._id]">Edit</button>
+        <button class="btn btn-default btn-warning" [routerLink]="['../../editor', project._id]">Edit</button>
       </div>
     </div>
   </div>
