--- a/src/app/users/chat/message/message.component.html
+++ b/src/app/users/chat/message/message.component.html
@@ -1,30 +1,19 @@
 <div class="row card col-md-12 container" onload="findSender()" data-toggle="modal" data-target="#exampleModalLong" (click)="hasNotRead()">
   <!-- <div class="col-md-2"> -->
     <img class="lib-img-show" src="{{'../../assets/images/' + sender.profile_pic}}">
-    <h3 class="col-md-10">{{ sender.name }} wants to invest {{ message.proposed_amount | currency:'USD':true }}</h3>
-  <!-- </div> -->
-
-  <!-- <div *ngIf="message.isSuccess=='tick'">
-    <i class="fa fa-check" aria-hidden="true"> </i>
-  </div>
-  <div *ngIf="message.isSuccess=='pending'">
-    <i class="fa fa-ellipsis-h" aria-hidden="true"> </i>
-  </div>
-  <div *ngIf="message.isSuccess=='cross'">
-    <i class="fa fa-times" aria-hidden="true"> </i>
-  </div> -->
-
-  <ng-container [ngSwitch]="message.isSuccess">          <!-- <- Not a Dom Element-->
-    <ng-container *ngSwitchCase="'tick'">      <!-- <- Not a Dom Element-->
-      <i class="fa fa-check" aria-hidden="true"> </i> <!-- <- Dom Element-->
-    </ng-container>                         <!-- <- Not a Dom Element-->
-    <ng-container *ngSwitchCase="'pending'">      <!-- <- Not a Dom Element-->
-      <i class="fa fa-ellipsis-h" aria-hidden="true"> </i> <!-- <- Dom Element-->
-    </ng-container>
-    <ng-container *ngSwitchCase="'cross'">      <!-- <- Not a Dom Element-->
-      <i class="fa fa-times" aria-hidden="true"> </i> <!-- <- Dom Element-->
-    </ng-container>                         <!-- <- Not a Dom Element-->
-  </ng-container>
+    <h3 class="col-md-10">{{ sender.name }} wants to invest {{ message.proposed_amount | currency:'USD':true }}
+    </h3>
+      <ng-container [ngSwitch]="message.isSuccess">          <!-- <- Not a Dom Element-->
+        <ng-container *ngSwitchCase="'tick'">      <!-- <- Not a Dom Element-->
+          <i class="fa fa-check big-icon" aria-hidden="true"> </i> <!-- <- Dom Element-->
+        </ng-container>                         <!-- <- Not a Dom Element-->
+        <ng-container *ngSwitchCase="'pending'">      <!-- <- Not a Dom Element-->
+          <i class="fa fa-ellipsis-h pending" aria-hidden="true"> </i> <!-- <- Dom Element-->
+        </ng-container>
+        <ng-container *ngSwitchCase="'cross'">      <!-- <- Not a Dom Element-->
+          <i class="fa fa-times cross" aria-hidden="true"> </i> <!-- <- Dom Element-->
+        </ng-container>                         <!-- <- Not a Dom Element-->
+      </ng-container>
 
 </div>
 
