--- a/src/app/projectsFolder/projects/projects.component.html
+++ b/src/app/projectsFolder/projects/projects.component.html
@@ -3,7 +3,7 @@
   <label id="l1" for="tab1">Investor</label>
 
   <input id="tab2" type="radio" name="tabs" checked>
-  <label for="tab2">Developer</label>
+  <label id="l2" for="tab2">Developer</label>
 </div>
 
 <div class=all-projects>
